<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_schedule_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:textColor="@color/black"
        android:textSize="36sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name" />

        <TextView
            android:id="@+id/text_view_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_supervisor" />

        <TextView
            android:id="@+id/text_view_group_supervisor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_schedule_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_light"
            android:text="@string/accept"
            android:textColor="@color/lightBlack"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_reddish"
            android:text="@string/reject"
            android:textColor="@color/lightBlack"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>